--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -6,6 +6,8 @@ $grey: #eaeaea;
 $middle-grey: rgba(53,53,53,0.3);
 $dark-grey: #353535;
 $gradient: $primary-color, $secondary-color;
+$anim-dur: 6000ms;
+$anim-delay: $anim-dur / 10;
 $mobgrand: "only screen and (min-width: 460px)";
 $tab: "only screen and (min-width: 660px)";
 $tabgrand: "only screen and (min-width: 850px)";
