--- a/pages/_page.scss
+++ b/pages/_page.scss
@@ -59,7 +59,6 @@ hr {
     overflow: hidden;
     width: 86vw;
     max-width: 390px;
-    //height: 80px;
     margin-top: 25px;
     margin-bottom: 25px;
     margin-right: 25px;
@@ -73,13 +72,15 @@ hr {
         }        
     }    
 }
-.menudetail__p {    
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.4em;
+.menudetail__detail {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; 
+}
+.menudetail__p {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.4em;     
     padding-right: 15px;        
 }
 .menudetail__prix {
