mise en place de la boucle pour l'animation d'apparition des plats

--- a/style.css
+++ b/style.css
@@ -1094,6 +1094,11 @@ hr {
           animation-delay: 2700ms;
 }
 
+.containermenu--10 {
+  -webkit-animation-delay: 3000ms;
+          animation-delay: 3000ms;
+}
+
 .menudetail__detail {
   white-space: nowrap;
   overflow: hidden;
