--- a/pages/_page.scss
+++ b/pages/_page.scss
@@ -66,7 +66,7 @@ hr {
     border-radius: 15px;
     @include shadow;
     animation: opacity $anim-dur forwards;
-    @for $i from 1 to 10 {
+    @for $i from 1 through 10 {
         &--#{$i} {
             animation-delay: $anim-delay * $i;
         }        
