--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -12,3 +12,4 @@ $mobgrand: "only screen and (min-width: 460px)";
 $tab: "only screen and (min-width: 660px)";
 $tabgrand: "only screen and (min-width: 850px)";
 $screen: "only screen and (min-width: 1200px)";
+$screengrand: "only screen and (min-width: 1800px)";
