--- a/base/_loader.scss
+++ b/base/_loader.scss
@@ -1,6 +1,6 @@
-.loader {
+.loader {    
     z-index: 10;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: $dark-grey; 
