--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@
 
 .loader {
   z-index: 10;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #353535;
@@ -1038,8 +1038,6 @@ hr {
   background-color: #99E2D0;
   color: white;
   padding: 20px;
-  border-bottom-right-radius: 15px;
-  border-top-right-radius: 15px;
   -webkit-transition: -webkit-transform 0.5s ease-in-out;
   transition: -webkit-transform 0.5s ease-in-out;
   transition: transform 0.5s ease-in-out;
