--- a/style.css
+++ b/style.css
@@ -263,6 +263,9 @@ p {
           box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
   text-align: center;
   background: linear-gradient(356deg, #9356DC, #FF79DA);
+  opacity: 1;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .button__page {
@@ -276,6 +279,9 @@ p {
   background: linear-gradient(356deg, #9e67e0 0%, #ff8de0 100%);
   -webkit-box-shadow: 5px 5px 15px -3px #353535;
           box-shadow: 5px 5px 15px -3px #353535;
+  opacity: 1;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .button__fonction {
@@ -288,16 +294,25 @@ p {
   border-radius: 20px;
   text-align: center;
   background-color: #F6F6F6;
+  opacity: 1;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
   -webkit-box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
           box-shadow: 5px 5px 15px -3px rgba(53, 53, 53, 0.3);
 }
 
 .button__fonction:hover {
   background-color: #e9ddf8;
+  opacity: 1;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 .button__fonction:hover > .fonction__i {
   color: #9356DC;
+  opacity: 1;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 @media only screen and (min-width: 660px) {
@@ -709,6 +724,9 @@ a {
 .fonction__i {
   color: rgba(53, 53, 53, 0.3);
   margin: auto -30px auto 20px;
+  opacity: 1;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 @media only screen and (min-width: 660px) {
