--- a/utils/_animations.scss
+++ b/utils/_animations.scss
@@ -61,8 +61,10 @@
 @keyframes opacity {
   0% {
     opacity: 0;
+    transform: translateY(15px);
   }
   100% {
     opacity: 1;
+    transform: translateY(0px);
   }
 }
