--- a/components/_card.scss
+++ b/components/_card.scss
@@ -30,9 +30,6 @@
         right: 0;
         background-color: $third-color;        
     }
-    &:hover {
-        
-    }
 }
 .bottom {
     border-top-left-radius: 15px;
@@ -134,12 +131,7 @@ a {
     }
 
     .card {
-        width: 40vw;
-        transition: transform 0.5s ease-in-out;
-        &:hover {
-            transform: scale(1.1);
-            transition: transform 0.5s ease-in-out;
-        }
+        width: 40vw;       
     }
     .bottom {
         height: 25vw;
@@ -165,6 +157,11 @@ a {
 @media #{$screen} {
     .card {
         width: 20vw;
+        transition: transform 0.5s ease-in-out;
+        &:hover {
+            transform: translate(5px, -5px);
+            transition: transform 0.5s ease-in-out;
+        }
     }
     .bottom {
         height: 12vw;        
