--- a/style.css
+++ b/style.css
@@ -152,8 +152,12 @@
 @-webkit-keyframes opacity {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(15px);
-            transform: translateY(15px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  30% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
   100% {
     opacity: 1;
@@ -165,8 +169,12 @@
 @keyframes opacity {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(15px);
-            transform: translateY(15px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  30% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
   100% {
     opacity: 1;
