--- a/utils/_animations.scss
+++ b/utils/_animations.scss
@@ -61,7 +61,10 @@
 @keyframes opacity {
   0% {
     opacity: 0;
-    transform: translateY(15px);
+    transform: translateY(20px);
+  }
+  30% {
+    transform: translateY(0px);
   }
   100% {
     opacity: 1;
